--- a/src/app/core/components/homes/inicio-empleado/inicio-empleado.component.html
+++ b/src/app/core/components/homes/inicio-empleado/inicio-empleado.component.html
@@ -1,1 +1,178 @@
-<p>inicio-empleado próximamente!</p>
+<style>
+    .bd-placeholder-img {
+        font-size: 1.125rem;
+        text-anchor: middle;
+        -webkit-user-select: none;
+        -moz-user-select: none;
+        user-select: none;
+    }
+
+    @media (min-width: 768px) {
+        .bd-placeholder-img-lg {
+            font-size: 3.5rem;
+        }
+    }
+</style>
+
+<body class="p-0">
+    <main>
+        <div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-indicators">
+                <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="0" class="active"
+                    aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
+            </div>
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="https://www.teknei.com/wp-content/uploads/2021/04/colleagues-giving-fist-bump-e1619611120100.jpg"
+                        alt="Technology Office" class="d-block w-100">
+                    <div class="container">
+                        <div class="carousel-caption text-start text-info">
+                            <h1>Encuentra tu próximo empleo en tecnología!</h1>
+                            <p>Explora y postúlate a diversas ofertas de empleo en áreas tecnológicas.</p>
+                            <p><a [routerLink]="'/publicaciones/ver-todas' | rutaValida"
+                                    class="btn btn-lg btn-primary">Ver ofertas</a></p>
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="https://media-01.imu.nl/storage/softtrader.nl/22322/microsoft-volume-licentie-voor-office-2016-standard-of-2560x1100.jpg"
+                        alt="Technology Office" class="d-block w-100">
+                    <div class="container">
+                        <div class="carousel-caption text-info">
+                            <h1>Destaca entre los postulantes!</h1>
+                            <p>Compra una suscripción premium para aparecer primero en las listas de postulaciones.</p>
+                            <p><a [routerLink]="'/publicaciones/ver-todas' | rutaValida" class="btn btn-lg btn-primary">
+                                    Comprar suscripción</a></p>
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="https://ieu.edu.mx/wp-content/uploads/2020/09/home_office_p.png" alt="Technology Office"
+                        class="d-block w-100">
+                    <div class="container">
+                        <div class="carousel-caption text-end text-info">
+                            <h1>Gestiona tus postulaciones fácilmente.</h1>
+                            <p>Accede a todas las ofertas a las que te has postulado desde un solo lugar.</p>
+                            <p>
+                                <a [routerLink]="'/publicaciones/mis-postulaciones' | rutaValida"
+                                    class="btn btn-lg btn-primary">Mis postulaciones</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#myCarousel" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Anterior</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#myCarousel" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Siguiente</span>
+            </button>
+        </div>
+
+        <div class="container marketing">
+            <h3 class="text-start my-4 border-top pb-3 pt-3"><em>Encuentra tu próximo empleo en sencillos pasos:</em>
+            </h3>
+            <div class="row mt-3">
+                <div class="col-lg-4">
+                    <svg class="bd-placeholder-img rounded-circle" width="140" height="140"
+                        xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Explora ofertas"
+                        preserveAspectRatio="xMidYMid slice" focusable="false">
+                        <title>Explora ofertas</title>
+                        <circle cx="70" cy="70" r="70" fill="#f0f0f0" />
+                        <text x="50%" y="50%" fill="#333" font-size="50" font-family="FontAwesome" text-anchor="middle"
+                            dy=".3em">
+                            &#xf291; <!-- Código del ícono de exploración en FontAwesome -->
+                        </text>
+                    </svg>
+                    <h2>1. Explora ofertas</h2>
+                    <p>Revisa las ofertas de empleo disponibles en diversas áreas tecnológicas y encuentra la ideal para
+                        ti.</p>
+                    <p><a class="btn btn-secondary" [routerLink]="'/publicaciones/ver-todas' | rutaValida">Ver ofertas
+                            &raquo;</a></p>
+                </div>
+                <div class="col-lg-4">
+                    <svg class="bd-placeholder-img rounded-circle" width="140" height="140"
+                        xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Postúlate"
+                        preserveAspectRatio="xMidYMid slice" focusable="false">
+                        <title>Postúlate</title>
+                        <circle cx="70" cy="70" r="70" fill="#f0f0f0" />
+                        <text x="50%" y="50%" fill="#333" font-size="50" font-family="FontAwesome" text-anchor="middle"
+                            dy=".3em">
+                            &#xf15c; <!-- Código del ícono de documento en FontAwesome -->
+                        </text>
+                    </svg>
+                    <h2>2. Postúlate</h2>
+                    <p>Aplica a las ofertas de empleo que más te interesen y destaca entre los postulantes.</p>
+                    <p><a class="btn btn-secondary" [routerLink]="'/publicaciones/mis-postulaciones' | rutaValida">Mis
+                            postulaciones
+                            &raquo;</a></p>
+                </div>
+                <div class="col-lg-4">
+                    <svg class="bd-placeholder-img rounded-circle" width="140" height="140"
+                        xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Gestiona perfil"
+                        preserveAspectRatio="xMidYMid slice" focusable="false">
+                        <title>Gestiona perfil</title>
+                        <circle cx="70" cy="70" r="70" fill="#f0f0f0" />
+                        <text x="50%" y="50%" fill="#333" font-size="50" font-family="FontAwesome" text-anchor="middle"
+                            dy=".3em">
+                            &#xf007; <!-- Código del ícono de usuario en FontAwesome -->
+                        </text>
+                    </svg>
+                    <h2>3. Gestiona perfil</h2>
+                    <p>Mantén tu perfil actualizado y revisa tus postulaciones desde un solo lugar.</p>
+                    <p><a class="btn btn-secondary" [routerLink]="'/mi-informacion' | rutaValida">Mi perfil
+                            &raquo;</a></p>
+                </div>
+            </div>
+
+            <hr class="featurette-divider mt-3">
+
+            <div class="row featurette">
+                <div class="col-md-7">
+                    <h2 class="featurette-heading">Encuentra el empleo ideal. <span class="text-info">Fácil y
+                            rápido.</span></h2>
+                    <p class="lead">Nuestra plataforma te ayuda a conectar con empresas que buscan profesionales
+                        cualificados en tecnología, desde desarrolladores front-end hasta expertos en ciberseguridad.
+                    </p>
+                </div>
+                <div class="col-md-5">
+                    <img src="https://images.unsplash.com/photo-1486312338219-ce68d2c6f44d?q=80&w=1744&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                        alt="Technology Office" class="d-block w-100">
+                </div>
+            </div>
+
+            <hr class="featurette-divider">
+
+            <div class="row featurette">
+                <div class="col-md-7 order-md-2">
+                    <h2 class="featurette-heading">Publica tu perfil y encuentra empleo. <span
+                            class="text-info">Conéctate con las mejores empresas.</span></h2>
+                    <p class="lead">Crea y publica tu perfil profesional para que las empresas te encuentren. Encuentra
+                        el empleo adecuado para tus habilidades y experiencia.</p>
+                </div>
+                <div class="col-md-5 order-md-1">
+                    <img src="https://images.unsplash.com/photo-1517048676732-d65bc937f952?q=80&w=1740&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                        alt="Technology Office" class="d-block w-100">
+                </div>
+            </div>
+
+            <hr class="featurette-divider">
+
+            <div class="row featurette">
+                <div class="col-md-7">
+                    <h2 class="featurette-heading">Herramientas avanzadas de gestión de postulaciones. <span
+                            class="text-info">Sencillo y eficiente.</span></h2>
+                    <p class="lead">Utiliza nuestras herramientas para gestionar el proceso de postulación, desde la
+                        recepción de ofertas hasta la contratación.</p>
+                </div>
+                <div class="col-md-5">
+                    <img src="https://images.unsplash.com/21/mac-glasses.JPG?q=80&w=1740&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                        alt="Technology Office" class="d-block w-100">
+                </div>
+            </div>
+        </div>
+    </main>
+</body>
